<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAEBD7"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:padding="30dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_avatar"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/txt_nguoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/nguoido" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/txt_nguoi"
                android:background="@android:color/transparent" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEB887" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/txt_sodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/soto" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/txt_sodo"
                android:background="@android:color/transparent" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEB887" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/txt_muigiay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/muigiay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/txt_muigiay"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_img_vuong"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_on_check" />

                <TextView
                    android:id="@+id/txt_vuong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="Vuong" />

                <ImageView
                    android:id="@+id/btn_img_tron"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_off_check" />

                <TextView
                    android:id="@+id/txt_tron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="Tron" />


                <ImageView
                    android:id="@+id/btn_img_nhon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_off_check" />

                <TextView
                    android:id="@+id/txt_nhon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="Nhon" />


                <ImageView
                    android:id="@+id/btn_img_tu"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_off_check" />

                <TextView
                    android:id="@+id/txt_tu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="Tu" />
            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/btn_post"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/backgound_image_post"
            android:text="Post"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="20sp" />


    </LinearLayout>


</RelativeLayout>